--- a/src/sample/main.fxml
+++ b/src/sample/main.fxml
@@ -2,23 +2,51 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.MenuButton?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="anchorPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MainController">
+<AnchorPane fx:id="apLogin" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MainController">
    <children>
-      <ScrollPane layoutY="199.0" prefHeight="401.0" prefWidth="800.0" />
-      <Button fx:id="addButton" layoutX="241.0" layoutY="23.0" mnemonicParsing="false" text="ADD" />
-      <Button fx:id="deleteButton" layoutX="332.0" layoutY="23.0" mnemonicParsing="false" text="DELETE" />
-      <Button fx:id="editButton" layoutX="439.0" layoutY="23.0" mnemonicParsing="false" text="EDIT" />
-      <Label fx:id="label" layoutX="213.0" layoutY="125.0" text="Label" />
-      <MenuButton fx:id="menuButton" layoutX="40.0" layoutY="23.0" mnemonicParsing="false" onMouseClicked="#menuButtonOnAction" text="Tables">
-        <items>
-          <MenuItem fx:id="item1" mnemonicParsing="false" onAction="#menuButtonOnAction" text="Needy" />
-          <MenuItem mnemonicParsing="false" text="Donators" />
-        </items>
-      </MenuButton>
+      <ImageView fitHeight="600.0" fitWidth="814.0" layoutY="3.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../images/bg.jpg" />
+         </image>
+      </ImageView>
+      <GridPane layoutX="51.0" layoutY="52.0" prefHeight="108.0" prefWidth="284.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Username" textAlignment="CENTER">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <TextField fx:id="txtUsername" prefHeight="31.0" prefWidth="142.0" GridPane.columnIndex="1" />
+            <TextField fx:id="txtPassword" accessibleRole="PASSWORD_FIELD" prefHeight="32.0" prefWidth="142.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Password" GridPane.rowIndex="1">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Label>
+            <Button fx:id="btnLogin" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#checkLogin" prefHeight="17.0" prefWidth="142.0" text="Login" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <font>
+                  <Font size="14.0" />
+               </font>
+            </Button>
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
