--- a/src/sample/main.fxml
+++ b/src/sample/main.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -35,13 +36,13 @@
                </font>
             </Label>
             <TextField fx:id="txtUsername" prefHeight="31.0" prefWidth="142.0" GridPane.columnIndex="1" />
-            <TextField fx:id="txtPassword" accessibleRole="PASSWORD_FIELD" prefHeight="32.0" prefWidth="142.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
             <Label maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Password" GridPane.rowIndex="1">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Button fx:id="btnLogin" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#checkLogin" prefHeight="17.0" prefWidth="142.0" text="Login" GridPane.columnIndex="1" GridPane.rowIndex="2">
+             <PasswordField fx:id="txtPassword" prefHeight="31.0" prefWidth="142.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+             <Button fx:id="btnLogin" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#checkLogin" prefHeight="17.0" prefWidth="142.0" text="Login" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <font>
                   <Font size="14.0" />
                </font>
