--- a/src/sample/accounting.fxml
+++ b/src/sample/accounting.fxml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.String?>
-<?import javafx.collections.FXCollections?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
@@ -12,61 +9,32 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane prefHeight="516.0" prefWidth="784.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Accounting">
+<AnchorPane prefHeight="516.0" prefWidth="784.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.AccountingController">
    <children>
       <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="516.0" prefWidth="784.0">
          <children>
-            <Label layoutX="25.0" layoutY="16.0" text="First Name" />
-            <TextField fx:id="txtFName" layoutX="112.0" layoutY="12.0" prefHeight="26.0" prefWidth="138.0" />
-            <Label layoutX="25.0" layoutY="44.0" text="Last Name" />
-            <TextField fx:id="txtLName" layoutX="112.0" layoutY="40.0" prefHeight="26.0" prefWidth="138.0" />
-            <Label layoutX="26.0" layoutY="72.0" text="Identity No" />
-            <TextField fx:id="txtIdentityNo" layoutX="112.0" layoutY="68.0" prefHeight="26.0" prefWidth="138.0" />
-            <Label layoutX="26.0" layoutY="101.0" text="Marital Status" />
-            <ChoiceBox fx:id="cbMaritalStatus" layoutX="112.0" layoutY="97.0" prefHeight="25.0" prefWidth="138.0">
-               <items>
-                  <FXCollections fx:factory="observableArrayList">
-                     <String fx:value="Single" />
-                     <String fx:value="Married" />
-                     <String fx:value="Widowed" />
-                     <String fx:value="Divorced" />
-                  </FXCollections>
-               </items>
-            </ChoiceBox>
-            <Label layoutX="278.0" layoutY="15.0" text="Gender" />
-            <ChoiceBox fx:id="cbGender" layoutX="353.0" layoutY="11.0" prefHeight="25.0" prefWidth="138.0">
-               <items>
-                  <FXCollections fx:factory="observableArrayList">
-                     <String fx:value="Female" />
-                     <String fx:value="Male" />
-                  </FXCollections>
-               </items>
-            </ChoiceBox>
-            <Label layoutX="278.0" layoutY="43.0" text="Birthday" />
-            <TextField fx:id="txtBirthDay" layoutX="353.0" layoutY="39.0" prefHeight="26.0" prefWidth="138.0" />
-            <Label layoutX="278.0" layoutY="72.0" text="Child Amount" />
-            <TextField fx:id="txtChildAmount" layoutX="353.0" layoutY="68.0" prefHeight="26.0" prefWidth="138.0" />
-            <Label layoutX="280.0" layoutY="100.0" text="Income" />
-            <TextField fx:id="txtIncome" layoutX="353.0" layoutY="97.0" prefHeight="26.0" prefWidth="138.0" />
-            <Label layoutX="530.0" layoutY="16.0" text="Address" />
-            <TextField fx:id="txtAddress" layoutX="619.0" layoutY="12.0" prefHeight="26.0" prefWidth="138.0" />
-            <Label layoutX="530.0" layoutY="44.0" text="Phone Number" />
-            <TextField fx:id="txtPhone" layoutX="619.0" layoutY="40.0" prefHeight="26.0" prefWidth="138.0" />
-            <Label layoutX="530.0" layoutY="71.0" text="Email" />
-            <TextField fx:id="txtMail" layoutX="619.0" layoutY="68.0" prefHeight="26.0" prefWidth="138.0" />
+            <Label layoutX="156.0" layoutY="20.0" text="Balance ID" />
+            <TextField fx:id="txtBalanceID" layoutX="243.0" layoutY="16.0" prefHeight="26.0" prefWidth="138.0" />
+            <Label layoutX="156.0" layoutY="48.0" text="Balance Type" />
+            <TextField fx:id="txtbalanceType" layoutX="243.0" layoutY="44.0" prefHeight="26.0" prefWidth="138.0" />
+            <Label layoutX="157.0" layoutY="76.0" text="Description" />
+            <TextField fx:id="txtDescription" layoutX="243.0" layoutY="72.0" prefHeight="26.0" prefWidth="138.0" />
+            <Label layoutX="415.0" layoutY="18.0" text="Balance Date" />
+            <TextField fx:id="txtBalanceDate" layoutX="490.0" layoutY="14.0" prefHeight="26.0" prefWidth="138.0" />
+            <Label layoutX="415.0" layoutY="47.0" text="Amount" />
+            <TextField fx:id="txtAmount" layoutX="490.0" layoutY="43.0" prefHeight="26.0" prefWidth="138.0" />
+            <Label layoutX="417.0" layoutY="75.0" text="Dept ID" />
+            <TextField fx:id="txtDeptID" layoutX="490.0" layoutY="72.0" prefHeight="26.0" prefWidth="138.0" />
             <ScrollPane layoutY="192.0" prefHeight="323.0" prefWidth="784.0">
                <content>
-                  <TableView fx:id="tblNeedies" prefHeight="303.0" prefWidth="777.0">
+                  <TableView fx:id="tblAccounting" prefHeight="303.0" prefWidth="777.0">
                      <columns>
-                        <TableColumn fx:id="colFName" prefWidth="113.0" text="First Name" />
-                        <TableColumn fx:id="colLName" prefWidth="98.0" text="Last Name" />
-                        <TableColumn fx:id="colIdentityNo" prefWidth="90.0" text="Identity No" />
-                        <TableColumn fx:id="colMaritalStatus" prefWidth="90.0" text="Marital Status" />
-                        <TableColumn fx:id="colGender" prefWidth="50.0" text="Gender" />
-                        <TableColumn fx:id="colBirthDate" prefWidth="99.0" text="Birth Date" />
-                        <TableColumn fx:id="colChildAmount" prefWidth="69.0" text="Childs" />
-                        <TableColumn fx:id="colIncome" prefWidth="78.0" text="Income" />
+                        <TableColumn fx:id="colBalanceID" prefWidth="113.0" text="Balance ID" />
+                        <TableColumn fx:id="colBalanceType" prefWidth="98.0" text="Balance Type" />
+                        <TableColumn fx:id="colDescription" prefWidth="90.0" text="Description" />
+                        <TableColumn fx:id="colBalanceDate" prefWidth="90.0" text="Balance Date" />
+                        <TableColumn fx:id="colAmount" prefWidth="50.0" text="Amount" />
+                        <TableColumn fx:id="colDeptID" prefWidth="99.0" text="Dept ID" />
                         <TableColumn fx:id="colUpdate" prefWidth="54.0" />
                         <TableColumn fx:id="colDelete" prefWidth="67.0" />
                      </columns>
