--- a/src/sample/accounting.fxml
+++ b/src/sample/accounting.fxml
@@ -1,9 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -11,45 +18,84 @@
 
 <AnchorPane prefHeight="516.0" prefWidth="784.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.AccountingController">
    <children>
-      <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="516.0" prefWidth="784.0">
-         <children>
-            <Label layoutX="156.0" layoutY="20.0" text="Balance ID" />
-            <TextField fx:id="txtBalanceID" layoutX="243.0" layoutY="16.0" prefHeight="26.0" prefWidth="138.0" />
-            <Label layoutX="156.0" layoutY="48.0" text="Balance Type" />
-            <TextField fx:id="txtbalanceType" layoutX="243.0" layoutY="44.0" prefHeight="26.0" prefWidth="138.0" />
-            <Label layoutX="157.0" layoutY="76.0" text="Description" />
-            <TextField fx:id="txtDescription" layoutX="243.0" layoutY="72.0" prefHeight="26.0" prefWidth="138.0" />
-            <Label layoutX="415.0" layoutY="18.0" text="Balance Date" />
-            <TextField fx:id="txtBalanceDate" layoutX="490.0" layoutY="14.0" prefHeight="26.0" prefWidth="138.0" />
-            <Label layoutX="415.0" layoutY="47.0" text="Amount" />
-            <TextField fx:id="txtAmount" layoutX="490.0" layoutY="43.0" prefHeight="26.0" prefWidth="138.0" />
-            <Label layoutX="417.0" layoutY="75.0" text="Dept ID" />
-            <TextField fx:id="txtDeptID" layoutX="490.0" layoutY="72.0" prefHeight="26.0" prefWidth="138.0" />
-            <ScrollPane layoutY="192.0" prefHeight="323.0" prefWidth="784.0">
+      <TabPane prefHeight="516.0" prefWidth="777.0" tabClosingPolicy="UNAVAILABLE">
+         <tabs>
+            <Tab text="Operations">
                <content>
-                  <TableView fx:id="tblAccounting" prefHeight="303.0" prefWidth="777.0">
-                     <columns>
-                        <TableColumn fx:id="colBalanceID" prefWidth="113.0" text="Balance ID" />
-                        <TableColumn fx:id="colBalanceType" prefWidth="98.0" text="Balance Type" />
-                        <TableColumn fx:id="colDescription" prefWidth="90.0" text="Description" />
-                        <TableColumn fx:id="colBalanceDate" prefWidth="90.0" text="Balance Date" />
-                        <TableColumn fx:id="colAmount" prefWidth="50.0" text="Amount" />
-                        <TableColumn fx:id="colDeptID" prefWidth="99.0" text="Dept ID" />
-                        <TableColumn fx:id="colUpdate" prefWidth="54.0" />
-                        <TableColumn fx:id="colDelete" prefWidth="67.0" />
-                     </columns>
-                     <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                     </columnResizePolicy>
-                  </TableView>
+                  <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                     <children>
+                        <Label layoutX="32.0" layoutY="24.0" text="Balance Type" />
+                        <Label layoutX="30.0" layoutY="93.0" text="Description" />
+                        <TextField fx:id="txtDescription" layoutX="128.0" layoutY="88.0" prefHeight="26.0" prefWidth="522.0" />
+                        <Label layoutX="381.0" layoutY="60.0" text="Balance Date" />
+                        <Label layoutX="381.0" layoutY="24.0" text="Amount" />
+                        <TextField fx:id="txtAmount" layoutX="478.0" layoutY="20.0" prefHeight="26.0" prefWidth="174.0" />
+                        <Label layoutX="31.0" layoutY="56.0" text="Department" />
+                        <ScrollPane layoutY="163.0" prefHeight="323.0" prefWidth="784.0">
+                           <content>
+                              <TableView fx:id="tblAccounting" prefHeight="303.0" prefWidth="777.0">
+                                 <columns>
+                                    <TableColumn fx:id="colBalanceID" prefWidth="113.0" text="Balance ID" />
+                                    <TableColumn fx:id="colBalanceType" prefWidth="98.0" text="Balance Type" />
+                                    <TableColumn fx:id="colDescription" prefWidth="90.0" text="Description" />
+                                    <TableColumn fx:id="colBalanceDate" prefWidth="90.0" text="Balance Date" />
+                                    <TableColumn fx:id="colAmount" prefWidth="50.0" text="Amount" />
+                                    <TableColumn fx:id="colDeptID" prefWidth="99.0" text="Dept ID" />
+                                    <TableColumn fx:id="colUpdate" prefWidth="54.0" />
+                                    <TableColumn fx:id="colDelete" prefWidth="67.0" />
+                                 </columns>
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
+                              </TableView>
+                           </content>
+                        </ScrollPane>
+                        <Button fx:id="btnSave" layoutX="30.0" layoutY="130.0" mnemonicParsing="false" onAction="#saveNeedyForm" prefHeight="25.0" prefWidth="74.0" text="Save" />
+                        <Button fx:id="btnCancel" layoutX="128.0" layoutY="130.0" mnemonicParsing="false" onAction="#cancelUpdate" prefHeight="25.0" prefWidth="74.0" text="Cancel" visible="false" />
+                        <Button fx:id="btnClear" layoutX="600.0" layoutY="130.0" mnemonicParsing="false" onAction="#clearFields" prefHeight="25.0" prefWidth="74.0" text="Reset" visible="false" />
+                        <Button fx:id="btnSearch" layoutX="702.0" layoutY="130.0" mnemonicParsing="false" onAction="#searchForm" prefHeight="25.0" prefWidth="74.0" text="Search" />
+                        <Separator layoutX="31.0" layoutY="122.0" prefHeight="4.0" prefWidth="742.0" />
+                        <DatePicker fx:id="txtBalanceDate" editable="false" layoutX="477.0" layoutY="56.0" />
+                        <ComboBox fx:id="cbDepartment" layoutX="128.0" layoutY="56.0" prefWidth="150.0" />
+                        <ChoiceBox fx:id="cbBalanceType" layoutX="128.0" layoutY="20.0" prefWidth="150.0">
+                           <items>
+                              <FXCollections fx:factory="observableArrayList">
+                                 <String fx:value="expense" />
+                                 <String fx:value="income" />
+                              </FXCollections>
+                           </items>
+                        </ChoiceBox>
+                     </children>
+                  </AnchorPane>
                </content>
-            </ScrollPane>
-            <Button fx:id="btnSave" layoutX="25.0" layoutY="151.0" mnemonicParsing="false" onAction="#saveNeedyForm" prefHeight="25.0" prefWidth="74.0" text="Save" />
-            <Button fx:id="btnCancel" layoutX="112.0" layoutY="151.0" mnemonicParsing="false" onAction="#cancelUpdate" prefHeight="25.0" prefWidth="74.0" text="Cancel" visible="false" />
-            <Button fx:id="btnClear" layoutX="595.0" layoutY="151.0" mnemonicParsing="false" onAction="#clearFields" prefHeight="25.0" prefWidth="74.0" text="Reset" visible="false" />
-            <Button fx:id="btnSearch" layoutX="686.0" layoutY="151.0" mnemonicParsing="false" onAction="#searchForm" prefHeight="25.0" prefWidth="74.0" text="Search" />
-            <Separator layoutX="26.0" layoutY="136.0" prefHeight="0.0" prefWidth="730.0" />
-         </children>
-      </AnchorPane>
+            </Tab>
+            <Tab text="Calculations">
+               <content>
+                  <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                     <children>
+                        <Button fx:id="btnShowResult" layoutX="655.0" layoutY="26.0" mnemonicParsing="false" onAction="#loadCalculations" prefHeight="25.0" prefWidth="101.0" text="Show Result" />
+                        <TextField fx:id="txtByYear" layoutX="71.0" layoutY="26.0" prefHeight="25.0" prefWidth="164.0" />
+                        <Label layoutX="28.0" layoutY="30.0" text="Year" />
+                        <ChoiceBox fx:id="cbByType" layoutX="365.0" layoutY="26.0" prefWidth="150.0">
+                           <items>
+                              <FXCollections fx:factory="observableArrayList">
+                                 <String fx:value="expense" />
+                                 <String fx:value="income" />
+                              </FXCollections>
+                           </items>
+                        </ChoiceBox>
+                        <Label layoutX="305.0" layoutY="30.0" text="Type" />
+                        <TableView fx:id="tblCalculations" layoutX="10.0" layoutY="77.0" prefHeight="403.0" prefWidth="758.0">
+                           <columns>
+                              <TableColumn fx:id="colByMonth" prefWidth="168.0" text="Month" />
+                              <TableColumn fx:id="colByTotal" prefWidth="150.0" text="Total" />
+                           </columns>
+                        </TableView>
+                     </children>
+                  </AnchorPane>
+               </content>
+            </Tab>
+         </tabs>
+      </TabPane>
    </children>
 </AnchorPane>
