--- a/src/sample/department.fxml
+++ b/src/sample/department.fxml
@@ -1,47 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="516.0" prefWidth="784.0" xmlns="http://javafx.com/javafx/11.0.1"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.DepartmentController">
+<AnchorPane prefHeight="516.0" prefWidth="784.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.DepartmentController">
    <children>
-      <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="516.0" prefWidth="784.0">
-         <children>
-            <Label layoutX="25.0" layoutY="57.0" text="Department ID" />
-            <TextField fx:id="txtDeptID" layoutX="112.0" layoutY="53.0" prefHeight="26.0" prefWidth="138.0" />
-            <Label layoutX="265.0" layoutY="57.0" text="Department Name" />
-            <TextField fx:id="txtDeptName" layoutX="377.0" layoutY="52.0" prefHeight="26.0" prefWidth="138.0" />
-            <Label layoutX="535.0" layoutY="56.0" text="Manager ID" />
-            <TextField fx:id="txtMgrID" layoutX="621.0" layoutY="52.0" prefHeight="26.0" prefWidth="138.0" />
-            <ScrollPane layoutY="192.0" prefHeight="323.0" prefWidth="784.0">
+      <TabPane prefHeight="508.0" prefWidth="784.0" tabClosingPolicy="UNAVAILABLE">
+         <tabs>
+            <Tab text="Operations">
                <content>
-                  <TableView fx:id="tblDept" prefHeight="303.0" prefWidth="777.0">
-                     <columns>
-                        <TableColumn fx:id="colDeptID" prefWidth="113.0" text="Department ID" />
-                        <TableColumn fx:id="colDeptName" prefWidth="98.0" text="Department Name" />
-                        <TableColumn fx:id="colMgrID" prefWidth="90.0" text="Manager ID" />
-                        <TableColumn fx:id="colUpdate" prefWidth="90.0" />
-                        <TableColumn fx:id="colDelete" prefWidth="90.0" />
-                     </columns>
-                     <columnResizePolicy>
-                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-                     </columnResizePolicy>
-                  </TableView>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Label layoutX="25.0" layoutY="34.0" text="Department Name" />
+                        <TextField fx:id="txtDeptName" layoutX="172.0" layoutY="29.0" prefHeight="26.0" prefWidth="349.0" />
+                        <Label layoutX="26.0" layoutY="72.0" text="Manager" />
+                        <ScrollPane layoutX="7.0" layoutY="158.0" prefHeight="313.0" prefWidth="774.0">
+                           <content>
+                              <TableView fx:id="tblDept" prefHeight="311.0" prefWidth="768.0">
+                                 <columns>
+                                    <TableColumn fx:id="colDeptID" prefWidth="120.0" resizable="false" text="Department ID" />
+                                    <TableColumn fx:id="colDeptName" minWidth="0.0" prefWidth="375.0" resizable="false" text="Department Name" />
+                                    <TableColumn fx:id="colMgrID" minWidth="0.0" prefWidth="120.0" resizable="false" text="Manager ID" />
+                                    <TableColumn fx:id="colUpdate" minWidth="0.0" resizable="false" />
+                                    <TableColumn fx:id="colDelete" resizable="false" />
+                                 </columns>
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
+                              </TableView>
+                           </content>
+                        </ScrollPane>
+                        <Button fx:id="btnSave" layoutX="24.0" layoutY="123.0" mnemonicParsing="false" onAction="#saveDeptForm" prefHeight="25.0" prefWidth="74.0" text="Save" />
+                        <Button fx:id="btnCancel" layoutX="124.0" layoutY="123.0" mnemonicParsing="false" onAction="#cancelUpdate" prefHeight="25.0" prefWidth="74.0" text="Cancel" visible="false" />
+                        <Button fx:id="btnClear" layoutX="584.0" layoutY="124.0" mnemonicParsing="false" onAction="#clearFields" prefHeight="25.0" prefWidth="74.0" text="Reset" visible="false" />
+                        <Button fx:id="btnSearch" layoutX="683.0" layoutY="123.0" mnemonicParsing="false" onAction="#searchForm" prefHeight="25.0" prefWidth="74.0" text="Search" />
+                        <Separator layoutX="27.0" layoutY="114.0" prefHeight="0.0" prefWidth="730.0" />
+                        <ComboBox fx:id="cbManager" layoutX="172.0" layoutY="68.0" prefWidth="150.0" />
+                     </children>
+                  </AnchorPane>
                </content>
-            </ScrollPane>
-            <Button fx:id="btnSave" layoutX="25.0" layoutY="151.0" mnemonicParsing="false" onAction="#saveDeptForm" prefHeight="25.0" prefWidth="74.0" text="Save" />
-            <Button fx:id="btnCancel" layoutX="112.0" layoutY="151.0" mnemonicParsing="false" onAction="#cancelUpdate" prefHeight="25.0" prefWidth="74.0" text="Cancel" visible="false" />
-            <Button fx:id="btnClear" layoutX="595.0" layoutY="151.0" mnemonicParsing="false" onAction="#clearFields" prefHeight="25.0" prefWidth="74.0" text="Reset" visible="false" />
-            <Button fx:id="btnSearch" layoutX="686.0" layoutY="151.0" mnemonicParsing="false" onAction="#searchForm" prefHeight="25.0" prefWidth="74.0" text="Search" />
-            <Separator layoutX="26.0" layoutY="136.0" prefHeight="0.0" prefWidth="730.0" />
-         </children>
-      </AnchorPane>
+            </Tab>
+            <Tab text="Employees by Department">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <ComboBox fx:id="cbDepartment" layoutX="135.0" layoutY="14.0" prefHeight="25.0" prefWidth="226.0" />
+                        <Label layoutX="27.0" layoutY="18.0" text="Department" />
+                        <Button fx:id="btnShowEmployees" layoutX="409.0" layoutY="14.0" mnemonicParsing="false" onAction="#loadEmpList" text="Show Employees" />
+                        <Separator layoutX="27.0" layoutY="51.0" prefHeight="0.0" prefWidth="730.0" />
+                        <TableView fx:id="tblEmployee" layoutX="27.0" layoutY="64.0" prefHeight="396.0" prefWidth="734.0">
+                           <columns>
+                              <TableColumn fx:id="colEmployee" prefWidth="729.0" text="Employee List" />
+                           </columns>
+                        </TableView>
+                     </children>
+                  </AnchorPane>
+               </content>
+            </Tab>
+         </tabs>
+      </TabPane>
    </children>
 </AnchorPane>
