--- a/src/sample/donators.fxml
+++ b/src/sample/donators.fxml
@@ -14,14 +14,14 @@
 
 <AnchorPane prefHeight="516.0" prefWidth="784.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.DonatorsController">
    <children>
-      <Label layoutX="36.0" layoutY="54.0" text="First Name" />
-      <TextField fx:id="txtFName" layoutX="123.0" layoutY="50.0" prefHeight="26.0" prefWidth="138.0" />
-      <Label layoutX="36.0" layoutY="82.0" text="Last Name" />
-      <TextField fx:id="txtLName" layoutX="123.0" layoutY="78.0" prefHeight="26.0" prefWidth="138.0" />
-      <Label layoutX="37.0" layoutY="110.0" text="Identity No" />
-      <TextField fx:id="txtIdentityNo" layoutX="123.0" layoutY="106.0" prefHeight="26.0" prefWidth="138.0" />
-      <Label layoutX="288.0" layoutY="25.0" text="Gender" />
-      <ChoiceBox fx:id="cbGender" layoutX="376.0" layoutY="20.0" prefHeight="25.0" prefWidth="138.0">
+      <Label layoutX="36.0" layoutY="66.0" text="First Name" />
+      <TextField fx:id="txtFName" layoutX="123.0" layoutY="62.0" prefHeight="26.0" prefWidth="138.0" />
+      <Label layoutX="37.0" layoutY="104.0" text="Last Name" />
+      <TextField fx:id="txtLName" layoutX="123.0" layoutY="99.0" prefHeight="26.0" prefWidth="138.0" />
+      <Label layoutX="280.0" layoutY="65.0" text="Identity No" />
+      <TextField fx:id="txtIdentityNo" layoutX="358.0" layoutY="61.0" prefHeight="26.0" prefWidth="138.0" />
+      <Label layoutX="280.0" layoutY="27.0" text="Gender" />
+      <ChoiceBox fx:id="cbGender" layoutX="358.0" layoutY="21.0" prefHeight="25.0" prefWidth="138.0">
          <items>
             <FXCollections fx:factory="observableArrayList">
                <String fx:value="Female" />
@@ -29,24 +29,24 @@
             </FXCollections>
          </items>
       </ChoiceBox>
-      <Label layoutX="287.0" layoutY="54.0" text="Address" />
-      <TextField fx:id="txtAddress" layoutX="376.0" layoutY="50.0" prefHeight="26.0" prefWidth="138.0" />
-      <Label layoutX="287.0" layoutY="82.0" text="Phone Number" />
-      <TextField fx:id="txtPhone" layoutX="376.0" layoutY="78.0" prefHeight="26.0" prefWidth="138.0" />
-      <Label layoutX="287.0" layoutY="109.0" text="Email" />
-      <TextField fx:id="txtMail" layoutX="376.0" layoutY="106.0" prefHeight="26.0" prefWidth="138.0" />
+      <Label layoutX="529.0" layoutY="26.0" text="Address" />
+      <TextField fx:id="txtAddress" layoutX="618.0" layoutY="22.0" prefHeight="26.0" prefWidth="138.0" />
+      <Label layoutX="529.0" layoutY="66.0" text="Phone Number" />
+      <TextField fx:id="txtPhone" layoutX="618.0" layoutY="62.0" prefHeight="26.0" prefWidth="138.0" />
+      <Label layoutX="529.0" layoutY="104.0" text="Email" />
+      <TextField fx:id="txtMail" layoutX="618.0" layoutY="100.0" prefHeight="26.0" prefWidth="138.0" />
       <ScrollPane layoutX="10.0" layoutY="202.0" prefHeight="323.0" prefWidth="784.0">
          <content>
             <TableView fx:id="tblDonators" prefHeight="303.0" prefWidth="777.0">
                <columns>
-                  <TableColumn fx:id="colCName" prefWidth="78.0" text="Company Name" />
-                  <TableColumn fx:id="colFName" prefWidth="113.0" text="First Name" />
-                  <TableColumn fx:id="colLName" prefWidth="98.0" text="Last Name" />
-                  <TableColumn fx:id="colIdentityNo" prefWidth="90.0" text="Identity No" />
-                  <TableColumn fx:id="colGender" prefWidth="50.0" text="Gender" />
-                  <TableColumn fx:id="colProfession" prefWidth="50.0" text="Profession" />
-                  <TableColumn fx:id="colUpdate" prefWidth="50.0" />
-                  <TableColumn fx:id="colDelete" prefWidth="50.0" />
+                  <TableColumn fx:id="colCName" prefWidth="120.0" resizable="false" text="Company Name" />
+                  <TableColumn fx:id="colFName" prefWidth="120.0" resizable="false" text="First Name" />
+                  <TableColumn fx:id="colLName" prefWidth="120.0" resizable="false" text="Last Name" />
+                  <TableColumn fx:id="colIdentityNo" resizable="false" text="Identity No" />
+                  <TableColumn fx:id="colGender" prefWidth="60.0" resizable="false" text="Gender" />
+                  <TableColumn fx:id="colProfession" prefWidth="120.0" resizable="false" text="Profession" />
+                  <TableColumn fx:id="colUpdate" prefWidth="60.0" resizable="false" />
+                  <TableColumn fx:id="colDelete" resizable="false" />
                </columns>
                <columnResizePolicy>
                   <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -61,7 +61,7 @@
       <Separator layoutX="36.0" layoutY="146.0" prefHeight="0.0" prefWidth="730.0" />
       <Label layoutX="35.0" layoutY="28.0" text="Company Name" />
       <TextField fx:id="txtCName" layoutX="123.0" layoutY="20.0" prefHeight="26.0" prefWidth="138.0" />
-      <Label layoutX="556.0" layoutY="24.0" text="Profession" />
-      <TextField fx:id="txtProfession" layoutX="626.0" layoutY="20.0" prefHeight="26.0" prefWidth="138.0" />
+      <Label layoutX="280.0" layoutY="104.0" text="Profession" />
+      <TextField fx:id="txtProfession" layoutX="358.0" layoutY="99.0" prefHeight="26.0" prefWidth="138.0" />
    </children>
 </AnchorPane>
