--- a/src/sample/employee.fxml
+++ b/src/sample/employee.fxml
@@ -2,87 +2,125 @@
 
 <?import java.lang.String?>
 <?import javafx.collections.FXCollections?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="516.0" prefWidth="784.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.EmployeeController">
    <children>
-      <Label layoutX="25.0" layoutY="45.0" text="First Name" />
-      <TextField fx:id="txtFName" layoutX="112.0" layoutY="41.0" prefHeight="26.0" prefWidth="138.0" />
-      <Label layoutX="25.0" layoutY="73.0" text="Last Name" />
-      <TextField fx:id="txtLName" layoutX="112.0" layoutY="69.0" prefHeight="26.0" prefWidth="138.0" />
-      <Label layoutX="26.0" layoutY="101.0" text="Identity No" />
-      <TextField fx:id="txtIdentityNo" layoutX="112.0" layoutY="97.0" prefHeight="26.0" prefWidth="138.0" />
-      <Label layoutX="267.0" layoutY="7.0" text="Marital Status" />
-      <ChoiceBox fx:id="cbMaritalStatus" layoutX="353.0" layoutY="1.0" prefHeight="25.0" prefWidth="138.0">
-         <items>
-            <FXCollections fx:factory="observableArrayList">
-               <String fx:value="Single" />
-               <String fx:value="Married" />
-               <String fx:value="Widowed" />
-               <String fx:value="Divorced" />
-            </FXCollections>
-         </items>
-      </ChoiceBox>
-      <Label layoutX="266.0" layoutY="29.0" text="Gender" />
-      <ChoiceBox fx:id="cbGender" layoutX="353.0" layoutY="28.0" prefHeight="25.0" prefWidth="138.0">
-         <items>
-            <FXCollections fx:factory="observableArrayList">
-               <String fx:value="Female" />
-               <String fx:value="Male" />
-            </FXCollections>
-         </items>
-      </ChoiceBox>
-      <Label layoutX="268.0" layoutY="59.0" text="Birthday" />
-      <TextField fx:id="txtBirthDay" layoutX="353.0" layoutY="57.0" prefHeight="26.0" prefWidth="138.0" />
-      <Label layoutX="530.0" layoutY="16.0" text="Address" />
-      <TextField fx:id="txtAddress" layoutX="619.0" layoutY="12.0" prefHeight="26.0" prefWidth="138.0" />
-      <Label layoutX="530.0" layoutY="44.0" text="Phone Number" />
-      <TextField fx:id="txtPhone" layoutX="619.0" layoutY="40.0" prefHeight="26.0" prefWidth="138.0" />
-      <Label layoutX="530.0" layoutY="71.0" text="Email" />
-      <TextField fx:id="txtMail" layoutX="619.0" layoutY="68.0" prefHeight="26.0" prefWidth="138.0" />
-      <ScrollPane layoutY="192.0" prefHeight="323.0" prefWidth="784.0">
-         <content>
-            <TableView fx:id="tblEmployees" prefHeight="303.0" prefWidth="777.0">
-               <columns>
-                  <TableColumn fx:id="colDeptID" prefWidth="113.0" text="Dept ID" />
-                  <TableColumn fx:id="colFName" prefWidth="113.0" text="First Name" />
-                  <TableColumn fx:id="colLName" prefWidth="98.0" text="Last Name" />
-                  <TableColumn fx:id="colIdentityNo" prefWidth="90.0" text="Identity No" />
-                  <TableColumn fx:id="colMaritalStatus" prefWidth="90.0" text="Marital Status" />
-                  <TableColumn fx:id="colGender" prefWidth="50.0" text="Gender" />
-                  <TableColumn fx:id="colBirthDate" prefWidth="99.0" text="Birth Date" />
-                  <TableColumn fx:id="colStartDate" prefWidth="99.0" text="Start Date" />
-                  <TableColumn fx:id="colSalary" prefWidth="69.0" text="Salary" />
-                  <TableColumn fx:id="colTitle" prefWidth="78.0" text="Title" />
-                  <TableColumn fx:id="colUpdate" prefWidth="54.0" />
-                  <TableColumn fx:id="colDelete" prefWidth="67.0" />
-               </columns>
-               <columnResizePolicy>
-                  <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-               </columnResizePolicy>
-            </TableView>
-         </content>
-      </ScrollPane>
-      <Button fx:id="btnSave" layoutX="25.0" layoutY="151.0" mnemonicParsing="false" onAction="#saveEmployeeForm" prefHeight="25.0" prefWidth="74.0" text="Save" />
-      <Button fx:id="btnCancel" layoutX="112.0" layoutY="151.0" mnemonicParsing="false" onAction="#cancelUpdate" prefHeight="25.0" prefWidth="74.0" text="Cancel" visible="false" />
-      <Button fx:id="btnClear" layoutX="595.0" layoutY="151.0" mnemonicParsing="false" onAction="#clearFields" prefHeight="25.0" prefWidth="74.0" text="Reset" visible="false" />
-      <Button fx:id="btnSearch" layoutX="686.0" layoutY="151.0" mnemonicParsing="false" onAction="#searchForm" prefHeight="25.0" prefWidth="74.0" text="Search" />
-      <Separator layoutX="26.0" layoutY="149.0" prefHeight="0.0" prefWidth="730.0" />
-      <Label layoutX="25.0" layoutY="16.0" text="Dept ID" />
-      <TextField fx:id="txtDeptID" layoutX="112.0" layoutY="11.0" prefHeight="26.0" prefWidth="138.0" />
-      <Label layoutX="268.0" layoutY="92.0" text="Start Date" />
-      <TextField fx:id="txtStartDay" layoutX="353.0" layoutY="88.0" prefHeight="26.0" prefWidth="138.0" />
-      <Label layoutX="530.0" layoutY="101.0" text="Title" />
-      <TextField fx:id="txtTitle" layoutX="619.0" layoutY="97.0" prefHeight="26.0" prefWidth="138.0" />
-      <Label layoutX="270.0" layoutY="122.0" text="Salary" />
-      <TextField fx:id="txtSalary" layoutX="353.0" layoutY="118.0" prefHeight="26.0" prefWidth="138.0" />
+      <TabPane layoutX="12.0" layoutY="3.0" prefHeight="507.0" prefWidth="764.0" tabClosingPolicy="UNAVAILABLE">
+         <tabs>
+            <Tab text="Operations">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="162.0" prefWidth="196.0">
+                     <children>
+                        <Label layoutX="17.0" layoutY="12.0" text="First Name" />
+                        <TextField fx:id="txtFName" layoutX="90.0" layoutY="6.0" prefHeight="26.0" prefWidth="138.0" />
+                        <Label layoutX="18.0" layoutY="40.0" text="Last Name" />
+                        <TextField fx:id="txtLName" layoutX="90.0" layoutY="35.0" prefHeight="26.0" prefWidth="138.0" />
+                        <Label layoutX="16.0" layoutY="70.0" text="Identity No" />
+                        <TextField fx:id="txtIdentityNo" layoutX="90.0" layoutY="66.0" prefHeight="26.0" prefWidth="138.0" />
+                        <Label layoutX="258.0" layoutY="128.0" text="Mar. Stat." />
+                        <ChoiceBox fx:id="cbMaritalStatus" layoutX="333.0" layoutY="124.0" prefHeight="25.0" prefWidth="139.0">
+                           <items>
+                              <FXCollections fx:factory="observableArrayList">
+                                 <String fx:value="Single" />
+                                 <String fx:value="Married" />
+                                 <String fx:value="Widowed" />
+                                 <String fx:value="Divorced" />
+                              </FXCollections>
+                           </items>
+                        </ChoiceBox>
+                        <Label layoutX="16.0" layoutY="127.0" text="Gender" />
+                        <ChoiceBox fx:id="cbGender" layoutX="90.0" layoutY="123.0" prefHeight="25.0" prefWidth="138.0">
+                           <items>
+                              <FXCollections fx:factory="observableArrayList">
+                                 <String fx:value="Female" />
+                                 <String fx:value="Male" />
+                              </FXCollections>
+                           </items>
+                        </ChoiceBox>
+                        <Label layoutX="16.0" layoutY="98.0" text="Birth Date" />
+                        <Label layoutX="509.0" layoutY="12.0" text="Address" />
+                        <TextField fx:id="txtAddress" layoutX="611.0" layoutY="8.0" prefHeight="26.0" prefWidth="138.0" />
+                        <Label layoutX="509.0" layoutY="41.0" text="Phone Number" />
+                        <TextField fx:id="txtPhone" layoutX="612.0" layoutY="36.0" prefHeight="26.0" prefWidth="138.0" />
+                        <Label layoutX="510.0" layoutY="70.0" text="Email" />
+                        <TextField fx:id="txtMail" layoutX="612.0" layoutY="65.0" prefHeight="26.0" prefWidth="138.0" />
+                        <ScrollPane layoutY="193.0" prefHeight="284.0" prefWidth="772.0">
+                           <content>
+                              <TableView fx:id="tblEmployees" prefHeight="277.0" prefWidth="769.0">
+                                 <columns>
+                                    <TableColumn fx:id="colDeptID" prefWidth="50.0" resizable="false" text="Dept ID" />
+                                    <TableColumn fx:id="colFName" resizable="false" text="First Name" />
+                                    <TableColumn fx:id="colLName" resizable="false" text="Last Name" />
+                                    <TableColumn fx:id="colIdentityNo" prefWidth="70.0" resizable="false" text="Identity No" />
+                                    <TableColumn fx:id="colMaritalStatus" prefWidth="60.0" resizable="false" text="Mar. Stat." />
+                                    <TableColumn fx:id="colGender" prefWidth="50.0" resizable="false" text="Gender" />
+                                    <TableColumn fx:id="colBirthDate" prefWidth="75.0" resizable="false" text="Birth Date" />
+                                    <TableColumn fx:id="colStartDate" prefWidth="75.0" resizable="false" text="Start Date" />
+                                    <TableColumn fx:id="colSalary" prefWidth="50.0" resizable="false" text="Salary" />
+                                    <TableColumn fx:id="colTitle" prefWidth="78.0" text="Title" />
+                                    <TableColumn fx:id="colUpdate" prefWidth="50.0" resizable="false" />
+                                    <TableColumn fx:id="colDelete" prefWidth="65.0" resizable="false" />
+                                 </columns>
+                                 <columnResizePolicy>
+                                    <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                 </columnResizePolicy>
+                              </TableView>
+                           </content>
+                        </ScrollPane>
+                        <Button fx:id="btnSave" layoutX="16.0" layoutY="164.0" mnemonicParsing="false" onAction="#saveEmployeeForm" prefHeight="25.0" prefWidth="74.0" text="Save" />
+                        <Button fx:id="btnCancel" layoutX="101.0" layoutY="162.0" mnemonicParsing="false" onAction="#cancelUpdate" prefHeight="25.0" prefWidth="74.0" text="Cancel" visible="false" />
+                        <Button fx:id="btnClear" layoutX="587.0" layoutY="162.0" mnemonicParsing="false" onAction="#clearFields" prefHeight="25.0" prefWidth="74.0" text="Reset" visible="false" />
+                        <Button fx:id="btnSearch" layoutX="673.0" layoutY="164.0" mnemonicParsing="false" onAction="#searchForm" prefHeight="25.0" prefWidth="74.0" text="Search" />
+                        <Separator layoutX="17.0" layoutY="159.0" prefHeight="0.0" prefWidth="730.0" />
+                        <Label layoutX="257.0" layoutY="13.0" text="Department" />
+                        <Label layoutX="257.0" layoutY="41.0" text="Start Date" />
+                        <Label layoutX="257.0" layoutY="70.0" text="Title" />
+                        <TextField fx:id="txtTitle" layoutX="333.0" layoutY="65.0" prefHeight="26.0" prefWidth="138.0" />
+                        <Label layoutX="258.0" layoutY="99.0" prefHeight="17.0" prefWidth="43.0" text="Salary" />
+                        <TextField fx:id="txtSalary" layoutX="333.0" layoutY="95.0" prefHeight="26.0" prefWidth="138.0" />
+                        <ComboBox fx:id="cbDepartment" layoutX="333.0" layoutY="9.0" prefHeight="25.0" prefWidth="138.0" />
+                        <DatePicker fx:id="txtBirthDate" layoutX="90.0" layoutY="95.0" prefHeight="25.0" prefWidth="138.0" />
+                        <DatePicker fx:id="txtStartDate" layoutX="333.0" layoutY="36.0" prefHeight="25.0" prefWidth="138.0" />
+                     </children>
+                  </AnchorPane>
+               </content>
+            </Tab>
+            <Tab text="Summary for an Employee">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <Label layoutX="27.0" layoutY="18.0" text="Eployee ID" />
+                        <Button fx:id="btnShowEmployee" layoutX="313.0" layoutY="14.0" mnemonicParsing="false" onAction="#showEmpInfo" text="Show Info" />
+                        <TextField fx:id="txtEmpId" layoutX="115.0" layoutY="14.0" />
+                        <Separator layoutX="17.0" layoutY="48.0" prefHeight="0.0" prefWidth="730.0" />
+                        <Label fx:id="lblEmpInfo" layoutX="13.0" layoutY="74.0" prefHeight="71.0" prefWidth="732.0" wrapText="true">
+                           <padding>
+                              <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                           </padding>
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </AnchorPane>
+               </content>
+            </Tab>
+         </tabs>
+      </TabPane>
    </children>
 </AnchorPane>
