--- a/src/sample/home.fxml
+++ b/src/sample/home.fxml
@@ -3,85 +3,204 @@
 <?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="600.0" prefWidth="800.0" styleClass="main-btn-wrapper" stylesheets="@application.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.HomeController">
-   <children>
-      <GridPane hgap="2.0" layoutX="8.0" layoutY="4.0" prefHeight="46.0" prefWidth="784.0" vgap="8.0">
-        <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <Button fx:id="btnLoadNeedy" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#loadAllAction" stylesheets="@application.css" text="Needies" textAlignment="CENTER" GridPane.columnIndex="0">
-               <styleClass>
-                  <String fx:value="main-btn" />
-                  <String fx:value="btn-needies" />
-               </styleClass>
-            </Button>
-            <Button fx:id="btnLoadDonator" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#loadAllAction" stylesheets="@application.css" text="Donators" textAlignment="CENTER" GridPane.columnIndex="1">
-               <styleClass>
-                  <String fx:value="main-btn" />
-                  <String fx:value="btn-donator" />
-               </styleClass>
+    <children>
+        <GridPane fx:id="gpNavigation" hgap="2.0" layoutX="60.0" layoutY="4.0" prefHeight="46.0" prefWidth="736.0" vgap="8.0">
+            <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+            </columnConstraints>
+            <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            </rowConstraints>
+            <children>
+                <Button fx:id="btnLoadNeedy" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#loadAllAction" stylesheets="@application.css" text="Needies" textAlignment="CENTER" GridPane.columnIndex="0">
+                    <styleClass>
+                        <String fx:value="main-btn" />
+                        <String fx:value="btn-needies" />
+                    </styleClass>
+                </Button>
+                <Button fx:id="btnLoadDonator" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#loadAllAction" stylesheets="@application.css" text="Donators" textAlignment="CENTER" GridPane.columnIndex="1">
+                    <styleClass>
+                        <String fx:value="main-btn" />
+                        <String fx:value="btn-donator" />
+                    </styleClass>
 
-            </Button>
-             <Button fx:id="btnLoadMember" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#loadAllAction" stylesheets="@application.css" text="Members" textAlignment="CENTER" GridPane.columnIndex="2">
-                 <styleClass>
-                     <String fx:value="main-btn" />
-                     <String fx:value="btn-membership" />
-                 </styleClass>
-                 <opaqueInsets>
-                     <Insets left="28.0" />
-                 </opaqueInsets>
-             </Button>
-             <Button fx:id="btnLoadEmployee" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#loadAllAction" stylesheets="@application.css" text="Employees" textAlignment="CENTER" GridPane.columnIndex="3">
-                 <styleClass>
-                     <String fx:value="main-btn" />
-                     <String fx:value="btn-employee" />
-                 </styleClass>
-             </Button>
-             <Button fx:id="btnLoadDepartment" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#loadAllAction" stylesheets="@application.css" text="Departments" textAlignment="CENTER" GridPane.columnIndex="4">
-                 <styleClass>
-                     <String fx:value="main-btn" />
-                     <String fx:value="btn-department" />
-                 </styleClass>
-             </Button>
-             <Button fx:id="btnLoadInventory" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#loadAllAction" stylesheets="@application.css" text="Inventory" textAlignment="CENTER" GridPane.columnIndex="5">
-                 <styleClass>
-                     <String fx:value="main-btn" />
-                     <String fx:value="btn-inventory" />
-                 </styleClass>
-             </Button>
-             <Button fx:id="btnLoadAccounting" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#loadAllAction" stylesheets="@application.css" text="Accounting" textAlignment="CENTER" GridPane.columnIndex="6">
-                 <styleClass>
-                     <String fx:value="main-btn" />
-                     <String fx:value="btn-accounting" />
-                 </styleClass>
-             </Button>
-         </children>
-         <padding>
-            <Insets bottom="5.0" left="2.0" right="2.0" top="5.0" />
-         </padding>
-         <opaqueInsets>
-            <Insets />
-         </opaqueInsets>
-      </GridPane>
-      <HBox fx:id="paneMain" layoutX="8.0" layoutY="68.0" prefHeight="516.0" prefWidth="784.0" />
-   </children>
-   <opaqueInsets>
-      <Insets />
-   </opaqueInsets>
+                </Button>
+                <Button fx:id="btnLoadMember" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#loadAllAction" stylesheets="@application.css" text="Members" textAlignment="CENTER" GridPane.columnIndex="2">
+                    <styleClass>
+                        <String fx:value="main-btn" />
+                        <String fx:value="btn-membership" />
+                    </styleClass>
+                    <opaqueInsets>
+                        <Insets left="28.0" />
+                    </opaqueInsets>
+                </Button>
+                <Button fx:id="btnLoadEmployee" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#loadAllAction" stylesheets="@application.css" text="Employees" textAlignment="CENTER" GridPane.columnIndex="3">
+                    <styleClass>
+                        <String fx:value="main-btn" />
+                        <String fx:value="btn-employee" />
+                    </styleClass>
+                </Button>
+                <Button fx:id="btnLoadDepartment" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#loadAllAction" stylesheets="@application.css" text="Departments" textAlignment="CENTER" GridPane.columnIndex="4">
+                    <styleClass>
+                        <String fx:value="main-btn" />
+                        <String fx:value="btn-department" />
+                    </styleClass>
+                </Button>
+                <Button fx:id="btnLoadInventory" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#loadAllAction" stylesheets="@application.css" text="Inventory" textAlignment="CENTER" GridPane.columnIndex="5">
+                    <styleClass>
+                        <String fx:value="main-btn" />
+                        <String fx:value="btn-inventory" />
+                    </styleClass>
+                </Button>
+                <Button fx:id="btnLoadAccounting" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#loadAllAction" stylesheets="@application.css" text="Accounting" textAlignment="CENTER" GridPane.columnIndex="6">
+                    <styleClass>
+                        <String fx:value="main-btn" />
+                        <String fx:value="btn-accounting" />
+                    </styleClass>
+                </Button>
+            </children>
+            <padding>
+                <Insets bottom="5.0" left="2.0" right="2.0" top="5.0" />
+            </padding>
+            <opaqueInsets>
+                <Insets />
+            </opaqueInsets>
+        </GridPane>
+        <HBox fx:id="paneMain" layoutX="8.0" layoutY="68.0" prefHeight="516.0" prefWidth="784.0" visible="false" />
+        <Button fx:id="btnShowHomePage" layoutX="5.0" layoutY="9.0" mnemonicParsing="false" onAction="#showHomePage" prefHeight="36.0" prefWidth="52.0" style="-fx-background-color: #00407a;" text="Home" textFill="WHITE">
+            <font>
+                <Font name="System Bold" size="12.0" />
+            </font>
+        </Button>
+        <TabPane fx:id="paneHome" layoutX="24.0" layoutY="100.0" prefHeight="472.0" prefWidth="753.0" tabClosingPolicy="UNAVAILABLE">
+            <tabs>
+                <Tab fx:id="tabPaneStatistic" text="Statistics">
+                    <content>
+                        <AnchorPane prefHeight="251.0" prefWidth="753.0">
+                            <children>
+                                <Label alignment="CENTER" layoutX="12.0" layoutY="14.0" prefHeight="36.0" prefWidth="122.0" text="# of Needies">
+                                    <font>
+                                        <Font name="System Bold" size="14.0" />
+                                    </font>
+                                </Label>
+                                <Label fx:id="lblNeedy" alignment="CENTER" layoutX="13.0" layoutY="64.0" prefHeight="36.0" prefWidth="122.0" textFill="#bc1919">
+                                    <font>
+                                        <Font name="System Bold" size="24.0" />
+                                    </font>
+                                </Label>
+                                <Label alignment="CENTER" layoutX="161.0" layoutY="14.0" prefHeight="36.0" prefWidth="122.0" text="# of Donators">
+                                    <font>
+                                        <Font name="System Bold" size="14.0" />
+                                    </font>
+                                </Label>
+                                <Label fx:id="lblDonator" alignment="CENTER" layoutX="162.0" layoutY="64.0" prefHeight="36.0" prefWidth="122.0" textFill="#bc1919">
+                                    <font>
+                                        <Font name="System Bold" size="24.0" />
+                                    </font>
+                                </Label>
+                                <Label alignment="CENTER" layoutX="316.0" layoutY="14.0" prefHeight="36.0" prefWidth="122.0" text="# of Members">
+                                    <font>
+                                        <Font name="System Bold" size="14.0" />
+                                    </font>
+                                </Label>
+                                <Label fx:id="lblMember" alignment="CENTER" layoutX="317.0" layoutY="64.0" prefHeight="36.0" prefWidth="122.0" textFill="#bc1919">
+                                    <font>
+                                        <Font name="System Bold" size="24.0" />
+                                    </font>
+                                </Label>
+                                <Label alignment="CENTER" layoutX="467.0" layoutY="14.0" prefHeight="36.0" prefWidth="122.0" text="# of Employee">
+                                    <font>
+                                        <Font name="System Bold" size="14.0" />
+                                    </font>
+                                </Label>
+                                <Label fx:id="lblEmployee" alignment="CENTER" layoutX="468.0" layoutY="64.0" prefHeight="36.0" prefWidth="122.0" textFill="#bc1919">
+                                    <font>
+                                        <Font name="System Bold" size="24.0" />
+                                    </font>
+                                </Label>
+                                <Label alignment="CENTER" layoutX="619.0" layoutY="14.0" prefHeight="36.0" prefWidth="122.0" text="# of Departmens">
+                                    <font>
+                                        <Font name="System Bold" size="14.0" />
+                                    </font>
+                                </Label>
+                                <Label fx:id="lblDepartment" alignment="CENTER" layoutX="620.0" layoutY="64.0" prefHeight="36.0" prefWidth="122.0" textFill="#bc1919">
+                                    <font>
+                                        <Font name="System Bold" size="24.0" />
+                                    </font>
+                                </Label>
+                            </children>
+                        </AnchorPane>
+                    </content>
+                </Tab>
+                <Tab fx:id="tabPaneQuick" text="Quick Search">
+                    <content>
+                        <AnchorPane prefHeight="200.0" prefWidth="200.0">
+                            <children>
+                                <Button fx:id="btnSearch" layoutX="501.0" layoutY="17.0" mnemonicParsing="false" onAction="#showSearchResult" text="Search" />
+                                <Label layoutX="14.0" layoutY="21.0" prefHeight="17.0" prefWidth="296.0" text="Id No (Needy, Donator, Member, Employee)">
+                                    <font>
+                                        <Font name="System Bold" size="12.0" />
+                                    </font>
+                                </Label>
+                                <TextField fx:id="txtIdNo" layoutX="310.0" layoutY="17.0" prefHeight="25.0" prefWidth="148.0" />
+                                <TableView fx:id="tblSearchResult" layoutY="66.0" prefHeight="343.0" prefWidth="753.0">
+                                    <columns>
+                                        <TableColumn fx:id="colGenre" prefWidth="67.0" text="Genre" />
+                                        <TableColumn fx:id="colFirstName" prefWidth="99.0" text="Name" />
+                                        <TableColumn fx:id="colLastName" prefWidth="92.0" text="Surname" />
+                                        <TableColumn fx:id="colAddress" prefWidth="254.0" text="Address" />
+                                        <TableColumn fx:id="colPhoneNumber" prefWidth="76.0" text="Phone" />
+                                        <TableColumn fx:id="colEmail" prefWidth="148.0" text="Email" />
+                                    </columns>
+                                </TableView>
+                            </children>
+                        </AnchorPane>
+                    </content>
+                </Tab>
+                <Tab fx:id="tabPaneAll" text="All People by Relationship">
+                    <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                            <children>
+                                <TableView fx:id="tblAll" layoutY="50.0" prefHeight="390.0" prefWidth="753.0">
+                                    <columns>
+                                        <TableColumn fx:id="colAllFirstName" prefWidth="190.0" text="Name" />
+                                        <TableColumn fx:id="colAllLastName" prefWidth="145.0" text="Surname" />
+                                        <TableColumn fx:id="colAllGenre" prefWidth="108.0" text="Genre" />
+                                    </columns>
+                                </TableView>
+                                <CheckBox fx:id="cbNeedy" layoutX="21.0" layoutY="14.0" mnemonicParsing="false" text="Needies" />
+                                <CheckBox fx:id="cbDonator" layoutX="115.0" layoutY="14.0" mnemonicParsing="false" text="Donators" />
+                                <CheckBox fx:id="cbMember" layoutX="217.0" layoutY="14.0" mnemonicParsing="false" text="Members" />
+                                <CheckBox fx:id="cbEmployee" layoutX="320.0" layoutY="14.0" mnemonicParsing="false" text="Employees" />
+                                <Button fx:id="btnLoadAll" layoutX="443.0" layoutY="10.0" mnemonicParsing="false" onAction="#loadAllTable" text="Load Result" />
+                            </children></AnchorPane>
+                    </content>
+                </Tab>
+            </tabs>
+        </TabPane>
+    </children>
+    <opaqueInsets>
+        <Insets />
+    </opaqueInsets>
 </AnchorPane>
