--- a/src/sample/inventory.fxml
+++ b/src/sample/inventory.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
@@ -9,28 +12,26 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
+<?import javafx.scene.control.ComboBox?>
 <AnchorPane prefHeight="516.0" prefWidth="784.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.InventoryController">
    <children>
       <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="516.0" prefWidth="784.0">
          <children>
-            <Label layoutX="92.0" layoutY="48.0" text="Inventory ID" />
-            <TextField fx:id="txtInventoryID" layoutX="179.0" layoutY="44.0" prefHeight="26.0" prefWidth="138.0" />
-            <Label layoutX="92.0" layoutY="76.0" text="Inventory Type" />
-            <TextField fx:id="txtInventoryType" layoutX="179.0" layoutY="72.0" prefHeight="26.0" prefWidth="138.0" />
-            <Label layoutX="356.0" layoutY="76.0" text="Amount" />
-            <TextField fx:id="txtAmount" layoutX="456.0" layoutY="72.0" prefHeight="26.0" prefWidth="138.0" />
-            <Label layoutX="356.0" layoutY="48.0" text="Description" />
-            <TextField fx:id="txtDescription" layoutX="456.0" layoutY="44.0" prefHeight="26.0" prefWidth="138.0" />
+            <Label layoutX="58.0" layoutY="67.0" text="Inventory Type" />
+            <Label layoutX="58.0" layoutY="103.0" text="Amount" />
+            <TextField fx:id="txtAmount" layoutX="158.0" layoutY="99.0" prefHeight="26.0" prefWidth="150.0" />
+            <Label layoutX="58.0" layoutY="30.0" text="Description" />
+            <TextField fx:id="txtDescription" layoutX="158.0" layoutY="26.0" prefHeight="26.0" prefWidth="525.0" />
             <ScrollPane layoutY="192.0" prefHeight="323.0" prefWidth="784.0">
                <content>
                   <TableView fx:id="tblInventory" prefHeight="303.0" prefWidth="777.0">
                      <columns>
-                        <TableColumn fx:id="colInventoryID" prefWidth="113.0" text="Inventory ID" />
-                        <TableColumn fx:id="colInventoryType" prefWidth="98.0" text="Inventory Type" />
-                        <TableColumn fx:id="colDescription" prefWidth="90.0" text="Description" />
-                        <TableColumn fx:id="colAmount" prefWidth="90.0" text="Amount" />
-                        <TableColumn fx:id="colUpdate" prefWidth="54.0" />
-                        <TableColumn fx:id="colDelete" prefWidth="67.0" />
+                        <TableColumn fx:id="colInventoryID" prefWidth="90.0" resizable="false" text="Inventory ID" />
+                        <TableColumn fx:id="colInventoryType" prefWidth="120.0" resizable="false" text="Inventory Type" />
+                        <TableColumn fx:id="colDescription" prefWidth="300.0" resizable="false" text="Description" />
+                        <TableColumn fx:id="colAmount" prefWidth="90.0" resizable="false" text="Amount" />
+                        <TableColumn fx:id="colUpdate" resizable="false" />
+                        <TableColumn fx:id="colDelete" resizable="false" />
                      </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -43,6 +44,15 @@
             <Button fx:id="btnClear" layoutX="595.0" layoutY="151.0" mnemonicParsing="false" onAction="#clearFields" prefHeight="25.0" prefWidth="74.0" text="Reset" visible="false" />
             <Button fx:id="btnSearch" layoutX="686.0" layoutY="151.0" mnemonicParsing="false" onAction="#searchForm" prefHeight="25.0" prefWidth="74.0" text="Search" />
             <Separator layoutX="26.0" layoutY="136.0" prefHeight="0.0" prefWidth="730.0" />
+            <ChoiceBox fx:id="cbInventoryType" layoutX="158.0" layoutY="63.0" prefWidth="150.0" >
+               <items>
+                  <FXCollections fx:factory="observableArrayList">
+                     <String fx:value="fixed" />
+                     <String fx:value="movable" />
+                     <String fx:value="unknown" />
+                  </FXCollections>
+               </items>
+            </ChoiceBox>
          </children>
       </AnchorPane>
    </children>
