--- a/src/sample/members.fxml
+++ b/src/sample/members.fxml
@@ -4,6 +4,7 @@
 <?import javafx.collections.FXCollections?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
@@ -16,12 +17,12 @@
    <children>
       <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="516.0" prefWidth="784.0">
          <children>
-            <Label layoutX="27.0" layoutY="48.0" text="First Name" />
-            <TextField fx:id="txtFName" layoutX="112.0" layoutY="43.0" prefHeight="26.0" prefWidth="138.0" />
-            <Label layoutX="25.0" layoutY="79.0" text="Last Name" />
-            <TextField fx:id="txtLName" layoutX="112.0" layoutY="75.0" prefHeight="26.0" prefWidth="138.0" />
-            <Label layoutX="26.0" layoutY="107.0" text="Identity No" />
-            <TextField fx:id="txtIdentityNo" layoutX="112.0" layoutY="103.0" prefHeight="26.0" prefWidth="138.0" />
+            <Label layoutX="28.0" layoutY="16.0" text="First Name" />
+            <TextField fx:id="txtFName" layoutX="113.0" layoutY="12.0" prefHeight="26.0" prefWidth="138.0" />
+            <Label layoutX="26.0" layoutY="50.0" text="Last Name" />
+            <TextField fx:id="txtLName" layoutX="113.0" layoutY="44.0" prefHeight="26.0" prefWidth="138.0" />
+            <Label layoutX="27.0" layoutY="78.0" text="Identity No" />
+            <TextField fx:id="txtIdentityNo" layoutX="113.0" layoutY="74.0" prefHeight="26.0" prefWidth="138.0" />
             <Label layoutX="263.0" layoutY="16.0" text="Marital Status" />
             <ChoiceBox fx:id="cbMaritalStatus" layoutX="349.0" layoutY="12.0" prefHeight="25.0" prefWidth="138.0">
                <items>
@@ -42,28 +43,27 @@
                   </FXCollections>
                </items>
             </ChoiceBox>
-            <Label layoutX="263.0" layoutY="76.0" text="Birthday" />
-            <TextField fx:id="txtBirthDay" layoutX="350.0" layoutY="72.0" prefHeight="26.0" prefWidth="138.0" />
+            <Label layoutX="26.0" layoutY="108.0" text="Birth Date" />
             <Label layoutX="530.0" layoutY="16.0" text="Address" />
             <TextField fx:id="txtAddress" layoutX="619.0" layoutY="12.0" prefHeight="26.0" prefWidth="138.0" />
-            <Label layoutX="530.0" layoutY="44.0" text="Phone Number" />
-            <TextField fx:id="txtPhone" layoutX="619.0" layoutY="40.0" prefHeight="26.0" prefWidth="138.0" />
-            <Label layoutX="530.0" layoutY="71.0" text="Email" />
-            <TextField fx:id="txtMail" layoutX="619.0" layoutY="68.0" prefHeight="26.0" prefWidth="138.0" />
+            <Label layoutX="530.0" layoutY="48.0" text="Phone Number" />
+            <TextField fx:id="txtPhone" layoutX="619.0" layoutY="44.0" prefHeight="26.0" prefWidth="138.0" />
+            <Label layoutX="530.0" layoutY="78.0" text="Email" />
+            <TextField fx:id="txtMail" layoutX="619.0" layoutY="75.0" prefHeight="26.0" prefWidth="138.0" />
             <ScrollPane layoutY="192.0" prefHeight="323.0" prefWidth="784.0">
                <content>
                   <TableView fx:id="tblEmployees" prefHeight="303.0" prefWidth="777.0">
                      <columns>
-                        <TableColumn fx:id="colMemID" prefWidth="113.0" text="Membership ID" />
-                        <TableColumn fx:id="colFName" prefWidth="113.0" text="First Name" />
-                        <TableColumn fx:id="colLName" prefWidth="98.0" text="Last Name" />
-                        <TableColumn fx:id="colIdentityNo" prefWidth="90.0" text="Identity No" />
-                        <TableColumn fx:id="colMaritalStatus" prefWidth="90.0" text="Marital Status" />
-                        <TableColumn fx:id="colGender" prefWidth="50.0" text="Gender" />
-                        <TableColumn fx:id="colBirthDate" prefWidth="99.0" text="Birth Date" />
-                        <TableColumn fx:id="colStartDate" prefWidth="67.0" text="Start Date" />
-                        <TableColumn fx:id="colUpdate" prefWidth="54.0" />
-                        <TableColumn fx:id="colDelete" prefWidth="99.0" />
+                        <TableColumn fx:id="colMemID" prefWidth="60.0" resizable="false" text="Mem. ID" />
+                        <TableColumn fx:id="colFName" prefWidth="100.0" resizable="false" text="First Name" />
+                        <TableColumn fx:id="colLName" prefWidth="100.0" resizable="false" text="Last Name" />
+                        <TableColumn fx:id="colIdentityNo" prefWidth="90.0" resizable="false" text="Identity No" />
+                        <TableColumn fx:id="colMaritalStatus" prefWidth="90.0" resizable="false" text="Marital Status" />
+                        <TableColumn fx:id="colGender" prefWidth="50.0" resizable="false" text="Gender" />
+                        <TableColumn fx:id="colBirthDate" prefWidth="75.0" resizable="false" text="Birth Date" />
+                        <TableColumn fx:id="colStartDate" prefWidth="75.0" resizable="false" text="Start Date" />
+                        <TableColumn fx:id="colUpdate" prefWidth="50.0" resizable="false" />
+                        <TableColumn fx:id="colDelete" prefWidth="60.0" resizable="false" />
                      </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -76,10 +76,9 @@
             <Button fx:id="btnClear" layoutX="595.0" layoutY="151.0" mnemonicParsing="false" onAction="#clearFields" prefHeight="25.0" prefWidth="74.0" text="Reset" visible="false" />
             <Button fx:id="btnSearch" layoutX="686.0" layoutY="151.0" mnemonicParsing="false" onAction="#searchForm" prefHeight="25.0" prefWidth="74.0" text="Search" />
             <Separator layoutX="26.0" layoutY="136.0" prefHeight="0.0" prefWidth="730.0" />
-            <Label layoutX="26.0" layoutY="16.0" text="Membership ID" />
-            <TextField fx:id="txtMemID" layoutX="112.0" layoutY="12.0" prefHeight="26.0" prefWidth="138.0" />
-            <Label layoutX="263.0" layoutY="107.0" text="Start Date" />
-            <TextField fx:id="txtStartDate" layoutX="350.0" layoutY="103.0" prefHeight="26.0" prefWidth="138.0" />
+            <Label layoutX="263.0" layoutY="79.0" text="Start Date" />
+            <DatePicker fx:id="txtStartDate" layoutX="350.0" layoutY="76.0" prefHeight="25.0" prefWidth="138.0" />
+            <DatePicker fx:id="txtBirthDate" layoutX="112.0" layoutY="104.0" prefHeight="25.0" prefWidth="138.0" />
          </children>
       </AnchorPane>
    </children>
